comment-service/secret-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-service
  labels:
    app: comment-service
    project: codesync
spec:
  selector:
    app: comment-service
  ports:
    - name: http
      port: 8087
      targetPort: 8087
      protocol: TCP
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: comment-service
  labels:
    app: comment-service
    project: codesync
spec:
  to:
    kind: Service
    name: comment-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
